# ActionStudio

./: .gitignore  LICENSE  form.ui  icons.qrc  main.py  main_window.py  main_window.ui  pyproject.toml  requirements.txt  video_player.py  video_player.ui  video_viewport.py
src/: main_window.py  video_player.py  video_timeline.py  video_viewport.py
ui/: main_window.ui  video_player.ui  video_timeline.ui
